--- a/src/pages/component/pages/icon/icon.scss
+++ b/src/pages/component/pages/icon/icon.scss
@@ -4,7 +4,6 @@
   margin-bottom: 40px;
   padding-bottom: 40px;
   border-bottom: 2px dashed #999;
-  // padding-left: 180px;
   min-height: 120px;
 
   icon {
@@ -22,8 +21,7 @@
 }
 
 .icon_right {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 20px;
   &_head {
     color: #333;
     font-size: 32px;
