--- a/src/pages/component/pages/swiper/swiper.scss
+++ b/src/pages/component/pages/swiper/swiper.scss
@@ -1,42 +1,48 @@
-swiper {
-  margin: 0 100px;
-}
-
-.content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  line-height: 250px;
-  color: #fff;
-}
-.switch-list {
-  position: relative;
-  padding: 0 15px;
-  background-color: #FFFFFF;
-  &__item {
+.components-page__body {
+  padding: 0;
+  .switch-list {
     position: relative;
-    display: flex;
-    padding: 10px 0;
-    &:not(:first-child) {
-      &::before {
-        content: "";
-        position: absolute;
-        left: 15px;
-        right: -15px;
-        top: 0;
-        height: 1px;
-        border-top: 1px solid #e5e5e5;
-        color: #e5e5e5;
+    padding: 0 15px;
+    font-size: 30px;
+    background-color: #FFFFFF;
+    &__item {
+      position: relative;
+      display: flex;
+      padding: 10px 0;
+      &:not(:first-child) {
+        &::before {
+          content: "";
+          position: absolute;
+          left: 15px;
+          right: -15px;
+          top: 0;
+          height: 1px;
+          border-top: 1px solid #e5e5e5;
+          color: #e5e5e5;
+        }
+      }
+    }
+    &__text {
+      display: flex;
+      flex: 1;
+      align-items: center;
+      padding-left: 15px;
+    }
+  }
+  .slider-list {
+    margin-top: 80px;
+    padding: 0 40px;
+    &__item {
+      margin-bottom: 40px;
+      &-header {
+        font-size: 28px;
+        color: #999999;
+        text-align: center;
+        margin-bottom: 15px;
+      }
+      &-body {
+
       }
     }
   }
-  &__text {
-    display: flex;
-    flex: 1;
-    align-items: center;
-    padding-left: 15px;
-  }
-}
-.test-h{
-  height: 230px;
 }
