--- a/src/app.scss
+++ b/src/app.scss
@@ -3,6 +3,10 @@ html, body {
   padding: 0;
 
 }
+*{
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  outline: 0;
+}
 
 .navigate_btn {
   width: 600px;
@@ -25,10 +29,7 @@ page {
   font-size: 32px;
   line-height: 1.6;
 }
-checkbox,
-radio {
-  margin-right: 10px;
-}
+
 button {
   margin-top: 20px;
   margin-bottom: 20px;
