--- a/src/app.scss
+++ b/src/app.scss
@@ -36,7 +36,7 @@ form {
 
 textarea {
   position: relative;
-  display: block;
+  // display: block;
   border: 0;
   resize: none;
   width: 100%;
@@ -68,13 +68,14 @@ textarea {
   min-height: 100%;
   justify-content: space-between;
   font-size: 32px;
+  // font-family: -apple-system-font, Helvetica Neue, Helvetica, sans-serif;
 }
 .page-head {
   padding: 60px 50px 80px;
   text-align: center;
 }
 .page-head-title {
-  display: inline-block;
+  // display: inline-block;
   padding: 0 40px 20px 40px;
   font-size: 32px;
   color: #bebebe;
@@ -206,6 +207,7 @@ textarea {
   background-color: #d9d9d9;
   width: 4px;
   height: 80px;
+  // transform: translate(-50%, -50%);
 }
 .image-plus-vertical {
   position: absolute;
@@ -214,6 +216,7 @@ textarea {
   background-color: #d9d9d9;
   width: 80px;
   height: 4px;
+  // transform: translate(-50%, -50%);
 }
 
 .demo-text-1 {
@@ -229,6 +232,7 @@ textarea {
   position: absolute;
   top: 50%;
   left: 50%;
+  // transform: translate(-50%, -50%);
 }
 .demo-text-2 {
   position: relative;
@@ -243,6 +247,7 @@ textarea {
   position: absolute;
   top: 50%;
   left: 50%;
+  // transform: translate(-50%, -50%);
 }
 .demo-text-3 {
   position: relative;
@@ -257,12 +262,13 @@ textarea {
   position: absolute;
   top: 50%;
   left: 50%;
+  // transform: translate(-50%, -50%);
 }
 
 .wxapp-block{
   text-align: center;
   .sub-title{
-    display: inline-block;
+    // display: inline-block;
     padding: 60px 50px 10px;
     margin-bottom: 40px;
     font-size: 0.68267rem;
