fix(alipay): 一些兼容支付宝小程序的修改

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,3 +1,8 @@
+page {
+  overflow: hidden;
+}
+
+
 .about {
   text-align: center;
   margin-top: 150px;
@@ -5,6 +10,6 @@
   .info{
     margin-top: 50px;
     font-size: 28px;
-    line-height: 1.5rem;
+    line-height: 1.5;
   }
 }
