--- a/src/pages/component/pages/scroll-view/scroll-view.scss
+++ b/src/pages/component/pages/scroll-view/scroll-view.scss
@@ -1,3 +1,4 @@
+/*postcss-pxtransform rn eject enable*/
 .example {
   &-body {
     height: 300px;
@@ -19,3 +20,5 @@
     }
   }
 }
+
+/*postcss-pxtransform rn eject disable*/
