--- a/src/pages/component/pages/label/label.scss
+++ b/src/pages/component/pages/label/label.scss
@@ -1,3 +1,4 @@
+/*postcss-pxtransform rn eject enable*/
 .example-body {
   text-align: center;
   &__label {
@@ -9,3 +10,5 @@
     text-align: center;
   }
 }
+
+/*postcss-pxtransform rn eject disable*/
