--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,5 @@
-@import '@styles/reset.scss';
-@import '@styles/mixins.scss';
+@import './styles/reset.scss';
+@import './styles/mixins.scss';
 
 html, body {
   margin: 0;
