chore: 修改了 demo 以适配 Taro Next

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -9,9 +9,9 @@ page {
   height: 100%;
 }
 
-view,
-text,
-scroll-view {
+taro-view-core,
+taro-text-core,
+taro-scroll-view-core {
   box-sizing: border-box;
 }
 
