fix: 调整 scroll-view 和 swiper 样式

--- a/src/pages/component/pages/scroll-view/scroll-view.scss
+++ b/src/pages/component/pages/scroll-view/scroll-view.scss
@@ -1,6 +1,6 @@
 /*postcss-pxtransform rn eject enable*/
-.example {
-  &-body {
+.scroll-view {
+  .example-body {
     height: 300px;
     &__scroll-view {
       height: 100%;
