--- a/src/pages/component/pages/radio/radio.scss
+++ b/src/pages/component/pages/radio/radio.scss
@@ -1,9 +1,9 @@
-.components-page__body {
-  padding: 0;
-  .example-body{
-      text-align: center;
-  }
-}
+// .components-page__body {
+//   padding: 0;
+//   .example-body{
+//       text-align: center;
+//   }
+// }
 
 .example-body__radios {
   position: relative;
