--- a/src/pages/component/pages/swiper/swiper.scss
+++ b/src/pages/component/pages/swiper/swiper.scss
@@ -1,5 +1,5 @@
-.components-page__body {
-  &.swiper {
+// .components-page__body {
+  .swiper {
     padding: 0;
   }
   .switch-list {
@@ -45,7 +45,7 @@
       &-body {}
     }
   }
-}
+// }
 .demo-text {
   &-1,
   &-2,
