--- a/src/app.scss
+++ b/src/app.scss
@@ -1,12 +1,5 @@
-@import './styles/reset.scss';
+// @import './styles/reset.scss';
 @import './styles/mixins.scss';
-
-html, body {
-  margin: 0;
-  padding: 0;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  outline: 0;
-}
 
 .navigate_btn {
   width: 600px;
@@ -19,37 +12,6 @@ html, body {
   line-height: 80px;
   font-size: 28px;
   margin: 30px;
-}
-
-/* 来自官方示例      */
-/* reset */
-page {
-  background-color: #f8f8f8;
-  height: 100%;
-  font-size: 32px;
-  line-height: 1.6;
-}
-
-button {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-form {
-  width: 100%;
-}
-
-textarea {
-  position: relative;
-  display: block;
-  border: 0;
-  resize: none;
-  width: 100%;
-  height: 300px;
-  color: inherit;
-  font-size: 1em;
-  line-height: inherit;
-  outline: 0;
 }
 
 /* lib */
@@ -75,31 +37,6 @@ textarea {
   justify-content: space-between;
   font-size: 32px;
   @include eject(font-family, ' -apple-system-font, Helvetica Neue, Helvetica, sans-serif');
-}
-
-.page-head {
-  padding: 60px 50px 80px;
-  text-align: center;
-}
-
-.page-head-title {
-  //display: inline-block;
-  padding: 0 40px 20px 40px;
-  font-size: 32px;
-  color: #bebebe;
-}
-
-.page-head-line {
-  margin: 0 auto;
-  width: 150px;
-  height: 2px;
-  background-color: #d8d8d8;
-}
-
-.page-head-desc {
-  padding-top: 20px;
-  color: #9b9b9b;
-  font-size: 32px;
 }
 
 .page-body {
@@ -248,86 +185,95 @@ textarea {
   @include eject(transform, translate(-50%, -50%));
 }
 
-.demo-text-1 {
-  position: relative;
-  align-items: center;
-  justify-content: center;
-  background-color: #1aad19;
-  color: #ffffff;
-  font-size: 36px;
-}
+// .demo-text-1 {
+//   position: relative;
+//   align-items: center;
+//   justify-content: center;
+//   background-color: #1aad19;
+//   color: #ffffff;
+//   font-size: 36px;
+// }
 
-.demo-text-1:before {
-  content: 'A';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  @include eject(transform, translate(-50%, -50%));
-}
+// .demo-text-1:before {
+//   content: 'A';
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   @include eject(transform, translate(-50%, -50%));
+// }
 
-.demo-text-2 {
-  position: relative;
-  align-items: center;
-  justify-content: center;
-  background-color: #2782d7;
-  color: #ffffff;
-  font-size: 36px;
-}
+// .demo-text-2 {
+//   position: relative;
+//   align-items: center;
+//   justify-content: center;
+//   background-color: #2782d7;
+//   color: #ffffff;
+//   font-size: 36px;
+// }
 
-.demo-text-2:before {
-  content: 'B';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  @include eject(transform, translate(-50%, -50%));
-}
+// .demo-text-2:before {
+//   content: 'B';
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   @include eject(transform, translate(-50%, -50%));
+// }
 
-.demo-text-3 {
-  position: relative;
-  align-items: center;
-  justify-content: center;
-  background-color: #f1f1f1;
-  color: #353535;
-  font-size: 36px;
-}
+// .demo-text-3 {
+//   position: relative;
+//   align-items: center;
+//   justify-content: center;
+//   background-color: #f1f1f1;
+//   color: #353535;
+//   font-size: 36px;
+// }
 
-.demo-text-3:before {
-  content: 'C';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  @include eject(transform, translate(-50%, -50%));
-}
+// .demo-text-3:before {
+//   content: 'C';
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   @include eject(transform, translate(-50%, -50%));
+// }
 
-.wxapp-block {
-  text-align: center;
-  .sub-title {
-    display: inline-block;
-    padding: 60px 50px 10px;
-    margin-bottom: 40px;
-    font-size: 0.68267rem;
-    color: #bebebe;
-    border-bottom: 1px solid #d8d8d8;
-  }
-}
+// .wxapp-block {
+//   text-align: center;
+//   .sub-title {
+//     display: inline-block;
+//     padding: 60px 50px 10px;
+//     margin-bottom: 40px;
+//     font-size: 0.68267rem;
+//     color: #bebebe;
+//     border-bottom: 1px solid #d8d8d8;
+//   }
+// }
 
 // components pages style
 
 .components-page {
+  flex-direction: column;
+  width: 100%;
   font-size: 32px;
+  overflow: scroll;
   &__body {
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
     padding: 0 40px;
   }
   .example {
+    flex-direction: column;
+    width: 100%;
     margin-bottom: 60px;
     &-header {
-      text-align: center;
+      width: 100%;
       font-size: 34px;
       color: #999;
       margin-bottom: 20px;
-    }
-    &-body {
-
+      text {
+        width: 100%;
+        text-align: center;
+      }
     }
   }
 }
