--- a/src/pages/component/pages/input/input.scss
+++ b/src/pages/component/pages/input/input.scss
@@ -1,10 +1,10 @@
-.components-page{
-  &__body{
-    padding: 0;
-  }
-  .example-body{
-    padding: 20px;
-    background-color: white;
-    
-  }
-}
+// .components-page{
+//   &__body{
+//     padding: 0;
+//   }
+//   .example-body{
+//     padding: 20px;
+//     background-color: white;
+
+//   }
+// }
