--- a/src/pages/component/pages/scroll-view/scroll-view.scss
+++ b/src/pages/component/pages/scroll-view/scroll-view.scss
@@ -1,20 +1,35 @@
-/*postcss-pxtransform rn eject enable*/
-.scroll-view {
-  .example-body__scroll-view {
-    &--H {
-      white-space: nowrap;
-      .example-body__scroll-view-item {
-        display: inline-block;
-        width: 100%;
-      }
-    }
-    &--V {
-      height: 300px;
-    }
-    .example-body__scroll-view-item {
-      height: 300px;
-    }
-  }
+.scroll-view-example {
+  height: 300px;
 }
+.scroll-view-example__H {
+  height: 100%;
+}
+.scroll-view-example__V {
+  height: 100%;
+}
+// .example-body__scroll-view-item {
+//   height: 300px;
+// }
 
-/*postcss-pxtransform rn eject disable*/
+.scroll-view-example__item {
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  font-size: 36px;
+  flex: 1;
+  width: 100%;
+  height: 100%;
+}
+.scroll-view-example__item-1 {
+  @extend .scroll-view-example__item;
+  background-color: #1aad19;
+}
+.scroll-view-example__item-2 {
+  @extend .scroll-view-example__item;
+  background-color: #2782d7;
+}
+.scroll-view-example__item-3 {
+  @extend .scroll-view-example__item;
+  background-color: #f1f1f1;
+  color: #353535;
+}
