--- a/src/pages/component/pages/textarea/textarea.scss
+++ b/src/pages/component/pages/textarea/textarea.scss
@@ -1,6 +1,6 @@
-.components-page__body{
-  padding: 0;
-  .example-body__button {
-  text-align: center;
-}
-}
+// .components-page__body{
+//   padding: 0;
+//   .example-body__button {
+//   text-align: center;
+// }
+// }
