--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -5,43 +5,43 @@
  */
 
 /* weapp */
-page {
-  height: 100%;
-}
+// page {
+//   height: 100%;
+// }
 
-taro-view-core,
-taro-text-core,
-taro-scroll-view-core {
-  box-sizing: border-box;
-}
+// taro-view-core,
+// taro-text-core,
+// taro-scroll-view-core {
+//   box-sizing: border-box;
+// }
 
-button {
-  &:after {
-    display: none;
-  }
-}
+// button {
+//   &:after {
+//     display: none;
+//   }
+// }
 
 /* h5 */
 /*postcss-pxtransform rn eject enable*/
-div {
-  box-sizing: border-box;
-}
+// div {
+//   box-sizing: border-box;
+// }
 
-button {
-  outline: none;
-}
+// button {
+//   outline: none;
+// }
 
-.taro-text {
-  box-sizing: border-box;
-}
+// .taro-text {
+//   box-sizing: border-box;
+// }
 
-.taro-tabbar__panel,
-.taro_router {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-}
-.taro_page {
-  flex: 1;
-}
+// .taro-tabbar__panel,
+// .taro_router {
+//   flex: 1;
+//   display: flex;
+//   flex-direction: column;
+// }
+// .taro_page {
+//   flex: 1;
+// }
 /*postcss-pxtransform rn eject disable*/
