--- a/src/pages/component/pages/checkbox/checkbox.scss
+++ b/src/pages/component/pages/checkbox/checkbox.scss
@@ -35,7 +35,7 @@
   position: relative;
   display: flex;
   padding: 10px 15px;
-  &:not(:first-child) {
+  &:first-child {
     &::before {
       content: "";
       position: absolute;
