--- a/src/pages/component/pages/progress/progress.scss
+++ b/src/pages/component/pages/progress/progress.scss
@@ -1,5 +1,27 @@
+.components-page__body{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.components-page__body-title{
+  margin: 15px 0;
+  font-size: 24px;
+}
+
 .example-progress {
-  font-size: 32px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  font-size: 24px;
   position: relative;
-  margin-bottom: 80px;
+  margin-bottom: 50px;
+}
+.example-progress__small{
+  @extend .example-progress;
+  width: 40%;
+}
+.components-page__body-example{
+  display: flex;
+  flex-direction: column;
 }
