--- a/src/app.scss
+++ b/src/app.scss
@@ -255,7 +255,7 @@
   width: 100%;
   font-size: 32px;
   overflow: scroll;
-  &__body {
+  &_body {
     flex-direction: column;
     width: 100%;
     align-items: center;
