feat: add checkbox

--- a/src/pages/component/pages/checkbox/index.scss
+++ b/src/pages/component/pages/checkbox/index.scss
@@ -1,55 +1,35 @@
-// .components-page__body {
-//   padding: 0;
-//   .example-body {
-//     text-align: center;
-//   }
-// }
-
-.checkbox-list {
-  position: relative;
-  padding: 10px 15px;
-  background-color: #FFFFFF;
-  &::before {
-    content: " ";
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    height: 1px;
-    border-top: 1px solid #e5e5e5;
-    color: #e5e5e5;
-  }
-  &::after {
-    content: " ";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    height: 1px;
-    border-top: 1px solid #e5e5e5;
-    color: #e5e5e5;
-  }
+.checkbox-example {
+  width: 100%;
+  justify-content: center;
 }
-
-.checkbox-list__label {
-  position: relative;
-  display: flex;
-  padding: 10px 15px;
-  &:first-child {
-    &::before {
-      content: "";
-      position: absolute;
-      left: 0;
-      top: 0;
-      right: 0;
-      height: 1px;
-      border-top: 1px solid #e5e5e5;
-      color: #e5e5e5;
-      left: 15px;
-    }
-  }
+.checkbox-example-vertical {
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
 }
 
 .select-box {
   margin: 20px 0;
+  text {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+.checkbox-list {
+  width: 100%;
+  flex-direction: column;
+  position: relative;
+  padding: 0 15px;
+  background-color: #FFFFFF;
+  border-top: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.checkbox-list__label {
+  width: 100%;
+  position: relative;
+  display: flex;
+  padding: 10px 15px;
+  border-top: 1px solid #e5e5e5;
 }
