feat: change radio page

--- a/src/pages/component/pages/radio/index.scss
+++ b/src/pages/component/pages/radio/index.scss
@@ -1,58 +1,62 @@
-// .components-page__body {
-//   padding: 0;
-//   .example-body{
-//       text-align: center;
-//   }
-// }
+.components-page_body {
+  display: flex;
+  flex-direction: column;
 
-.example-body__radios {
-  position: relative;
-  padding: 0px 15px;
-  background-color: #FFFFFF;
-  &::before {
-    content: " ";
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    height: 1px;
-    border-top: 1px solid #e5e5e5;
-    color: #e5e5e5;
-  }
-  &::after {
-    content: " ";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    height: 1px;
-    border-top: 1px solid #e5e5e5;
-    color: #e5e5e5;
-  }
-  &-item {
-    position: relative;
+  .example-body {
     display: flex;
-    padding: 20px 15px;
-    // &:not(:first-child) {
-    //   &::before {
-    //     content: "";
-    //     position: absolute;
-    //     left: 0;
-    //     top: 0;
-    //     right: 0;
-    //     height: 1px;
-    //     border-top: 1px solid #e5e5e5;
-    //     color: #e5e5e5;
-    //     left: 15px;
-    //   }
-    // }
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 20px;
+
+    &-label {
+      background-color: #000000;
+      margin-right: 40px;
+    }
+
+    &-group {
+      display: flex;
+      flex-direction: column;
+    }
+  
+    &__select-box {
+      display: flex;
+      justify-content: center;
+      color: #333333;
+      width: 100%;
+      height: 40px;
+      margin-bottom: 20px;
+      font-size: 24px;
+    }
+
+    &__radios-box {
+      display: flex;
+      flex-direction: column;
+    }
+  
+    &__radios {
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      padding: 0px 7px;
+      background-color: #FFFFFF;
+      border-top: 1px solid #e5e5e5;
+      border-bottom: 1px solid #e5e5e5;
+      margin-bottom: 30px;
+
+      &-label {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        border-bottom: 1px solid #ccc;
+      }
+
+      &-label__active {
+        border-bottom: none;
+      }
+    }
   }
-}
 
-.example-body__select-box {
-  margin: 20px 0;
-}
-
-.example-title {
-  font-size: 20px;
+  .example-title {
+    font-size: 24px;
+  }
 }
