--- a/src/pages/component/pages/navigator/navigator.scss
+++ b/src/pages/component/pages/navigator/navigator.scss
@@ -1,11 +1,28 @@
 .example-body{
-  text-align: center;
-}
+  display: flex;
+  justify-content: center;
 
-.example-body__navigators-item {
-  height: 80px;
-  line-height: 80px;
-  margin: 20px 100px 0;
-  text-align: center;
-  border: 1px solid #ccc;
+  &__navigators {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  
+    &-item {
+      display: flex;
+      justify-content: center;
+      padding: 10px 40px;
+      align-items: center;
+      border: 1px solid #ccc;
+      margin-bottom: 20px;
+    }
+  }
+
+  &__navigator {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+  }
 }
