--- a/src/pages/component/pages/navigator/index.scss
+++ b/src/pages/component/pages/navigator/index.scss
@@ -1,4 +1,4 @@
-.example-body{
+.example-navigator {
   display: flex;
   justify-content: center;
 
@@ -20,9 +20,11 @@
   }
 
   &__navigator {
+    width: 300px;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 20px;
+    font-size: 30px;
   }
 }
