--- a/src/pages/component/pages/radio/index.scss
+++ b/src/pages/component/pages/radio/index.scss
@@ -1,8 +1,9 @@
-.example-body {
+.example-radio {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-bottom: 20px;
+  align-items: center;
 
   &-label {
     margin-right: 20px;
@@ -18,7 +19,6 @@
     justify-content: center;
     color: #333333;
     width: 100%;
-    height: 40px;
     margin-bottom: 20px;
     font-size: 24px;
   }
@@ -43,6 +43,7 @@
       display: flex;
       flex-direction: row;
       border-bottom: 1px solid #ccc;
+      padding: 10px 15px;
     }
 
     &-label__active {
